2012-06-04  Frank Warmerdam  <warmerdam@google.com>

	* libtiff/tif_dirread.c: Avoid trusting samplesperpixel's default
	of 1 for purposes of trimming tags.  This is to get some super
	crappy OJPEG files to work again.  Grr. 
	http://bugzilla.maptools.org/show_bug.cgi?id=2348

2012-06-01  Frank Warmerdam  <warmerdam@google.com>

	* libtiff/tif_dir.c: Avoid generic handling of TIFFTAG_WHITELEVEL.
	http://bugzilla.maptools.org/show_bug.cgi?id=2321

2012-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* man/TIFFGetField.3tiff: Correct the 'count' field type in the
	example for how to retreive the value of unsupported tags.

2012-03-30  Frank Warmerdam  <warmerdam@google.com>

	* tif_getimage.c: Fix size overflow (zdi-can-1221,CVE-2012-1173)
	care of Tom Lane @ Red Hat.


2012-02-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtiff 3.9.6 released.

	* libtiff/tiffio.h: Use double-underbar syntax in GCC printf
	attribute specification to lessen the risk of accidental macro
	substitution.  Patch from Vincent Torri.

2012-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add support for using library symbol versioning on
	ELF systems with the GNU linker.  Support is enabled via
	--enable-ld-version-script and is disabled by default since it
	completely changes the ABI.

2011-10-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Update GNU libtool to 2.4.2.

	* tools/tiffsplit.c (tiffcp): TIFFGetField count field should be
	uint32 type for TIFFTAG_JPEGTABLES.  Patch by Christophe
	Deroulers.

2011-06-08  Dwight Kelly  <dkelly@apago.com>

	* tif_apple.c: fix for Bug 2247 - tif_apple.c _tiffSizeProc() did
	  not pass correct number arguments to TIFFErrorExt()

2011-04-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtiff 3.9.5 released.

2011-04-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Should use AC_CANONICAL_HOST since host specifies